--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </header>
 
     <div class="container col-xxl-8 px-4 py-5">
-      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5 shadow-lg">
         <div class="col-10 col-sm-8 col-lg-6">
           <img
             src="codingPic.jpg"
