--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
             "
           >
             <li>
-              <a href="index.html" class="nav-link px-2 text-secondary">Home</a>
+              <a href="index.html" class="nav-link px-2 text-white">Home</a>
             </li>
             <li>
               <a href="courses.html" class="nav-link px-2 text-white"
@@ -84,7 +84,7 @@
               </ul>
             </li>
             <li>
-              <a href="about.html" class="nav-link px-2 text-white">About</a>
+              <a href="about.html" class="nav-link px-2 text-secondary">About</a>
             </li>
             <li>
               <a href="contact.html" class="nav-link px-2 text-white"
