--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             "
           >
             <li>
-              <a href="index.html" class="nav-link px-2 text-secondary">Home</a>
+              <a href="index.html" class="nav-link px-2 text-white">Home</a>
             </li>
             <li>
               <a href="courses.html" class="nav-link px-2 text-white"
@@ -87,7 +87,7 @@
               <a href="about.html" class="nav-link px-2 text-white">About</a>
             </li>
             <li>
-              <a href="contact.html" class="nav-link px-2 text-white"
+              <a href="contact.html" class="nav-link px-2 text-secondary"
                 >Contact</a
               >
             </li>
