--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <title>Tutoriex</title>
+    <title>Tutoriex-Learn to Code-for Free</title>
   </head>
   <body>
     <header class="p-3 bg-dark text-white sticky-top" id="navbar">
